Fixed logo size on mobile, and mobile menu button is now functional.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 #ATOLogo {
-	width:250px;
+	width:175px;
 	padding-bottom:25px;
 }
 
